Remove AWS_SECRET_ACCESS_KEY and AWS_ACCESS_KEY_ID
